# evalframe

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml
src/evalframe/: __init__.py  app.py  frame.py  gui.py
tests/: test_evalframe.py
