[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalframe"
version = "0.2.0"
description = "Lightweight evaluation framework for LLM outputs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.scripts]
evalframe-gui = "evalframe.gui:launch_gui"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/evalframe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
